--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -18,6 +18,7 @@ $size1-7: 1 / 7 * 100%;
     height: 45px;
     padding: 0 40px;
     align-items: center;
+    justify-content: center;
     position: relative;
   }
 
